# bike_power_calc

./: .gitignore  100k_dp.py  README.md  __init__.py  calibration.py  optimize.py  power_estimator.py  pyproject.toml  requirements.txt
gps_data/: __init__.py  data_filter.py  gps_data_loader.py  gps_data_lowpass_filter.py  gps_data_point.py  gps_data_points.py  gpx_loader.py  raw_data_loader.py
helpers/: ranges.py
power_modifyer/: __init__.py  acceleration_modifyer.py  drag_modifyer.py  drivetrain_efficency_modifyer.py  elevation_modifyer.py  power_modifyer.py  rolling_force_modifyer.py
power_optimizer/: __init__.py  iterative_optimizer.py  optimizer.py  speed_optimizer.py
